--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="styles/index.css">
 
-    <title>Histórico de Viagens</title>
+    <title>Perfil de Viagens</title>
 </head>
 <body>
-    <header class="oi">oi</header>
+    <div class="bg-surface-color">
+        <header></header>
+    </div>
 </body>
 </html>
