--- a/index.html
+++ b/index.html
@@ -8,9 +8,25 @@
 
     <title>Perfil de Viagens</title>
 </head>
+
 <body>
     <div class="bg-surface-color">
-        <header></header>
+        <header>
+            <img src="assets/Logo.svg" alt="Logo">
+
+            <div class="nav-menu">
+                <img src="assets/MagnifyingGlass.svg" alt="">
+
+                <nav>
+                    <ul>
+                        <li><a href="">Explorar</a></li>
+                        <li><a href="">Minhas viagnes</a></li>
+                    </ul>
+                </nav>
+
+                <img src="assets/" alt="">
+            </div>
+        </header>
     </div>
 </body>
 </html>
