--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/index.css">
 
     <title>Perfil de Viagens</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div class="bg-surface-color">
-      <header>
-        <img src="assets/Logo.svg" alt="Logo" />
+        <header>
+            <img src="assets/Logo.svg" alt="Logo">
 
-        <div class="nav-menu">
-          <img src="assets/MagnifyingGlass.svg" alt="" />
+            <div class="nav-menu">
+                <img src="assets/MagnifyingGlass.svg" alt="">
 
-          <nav>
-            <ul>
-              <li><a href="">Explorar</a></li>
-              <li><a href="">Minhas viagnes</a></li>
-            </ul>
-          </nav>
+                <nav>
+                    <ul>
+                        <li><a href="">Explorar</a></li>
+                        <li><a href="">Minhas viagnes</a></li>
+                    </ul>
+                </nav>
 
-          <img src="assets/" alt="" />
-        </div>
-      </header>
+                <img src="assets/" alt="">
+            </div>
+        </header>
     </div>
-  </body>
+</body>
 </html>
