--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#">Minhas Viagens</a></li>
           <li>
             <a href="#">
-              <img src="assets/icons/Profile pic.png">
+              <img src="assets/profile-pic.jpg">
             </a>
           </li>
         </ul>
