--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">
           <img src="assets/icons/Logo.svg" alt="Logomarca">
         </a>
-        <ul id="primary-menu">
+        <ul id="primary-menu" class="nav-list">
           <li>
             <a href="#">
               <img src="assets/icons/MagnifyingGlass.svg">
@@ -24,7 +24,7 @@
           <li><a href="#">Minhas Viagens</a></li>
           <li>
             <a href="#">
-              <img src="assets/profile-pic.jpg">
+              <img src="assets/profile-pic.jpg" class="profile-pic-nav">
             </a>
           </li>
         </ul>
