--- a/index.html
+++ b/index.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/index.css" />
     <title>Viagens</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="bg-surface-color">
       <nav class="container">
         <a href="#">
-          <img src="assets/icons/Logo.svg" alt="Logomarca">
+          <img src="assets/icons/Logo.svg" alt="Logomarca" />
         </a>
         <ul id="primary-menu" class="nav-list">
           <li>
             <a href="#">
-              <img src="assets/icons/MagnifyingGlass.svg">
+              <img src="assets/icons/MagnifyingGlass.svg" />
             </a>
           </li>
           <li><a href="#">Explorar</a></li>
           <li><a href="#">Minhas Viagens</a></li>
           <li>
             <a href="#">
-              <img src="assets/profile-pic.jpg" class="profile-pic-nav">
+              <img src="assets/profile-pic.jpg" class="profile-pic-nav" />
             </a>
           </li>
         </ul>
       </nav>
       <header>
         <div class="container">
-          <img src="assets/Profile pic.png" alt="">
-          <div>
-            <h1>Isabela Torres</h1>
-            <p>Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
-              Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a
-              partir da movimentada cidade de São Paulo. 🏙️📸</p>
+          <div id="profile">
+            <img
+              src="assets/profile-pic.jpg"
+              alt="Image profile"
+              class="profile-pic-nav"
+            />
+
+            <div>
+              <h1>Isabela Torres</h1>
+              <p>
+                Amante de viagens, cultura e gastronomia. 🌍✈️ <br />
+                Aqui compartilho as histórias registradas em cada clique,
+                explorando cantinhos fascinantes do nosso planeta a partir da
+                movimentada cidade de São Paulo. 🏙️📸
+              </p>
+            </div>
           </div>
-      
+
           <ul id="info">
             <li>
-              <img src="assets/icons/MapPin.svg" alt="">
+              <img src="assets/icons/MapPin.svg" alt="" />
               <span>São Paulo, Brazil</span>
             </li>
             <li>
-              <img src="assets/icons/AirplaneTilt.svg" alt="">
+              <img src="assets/icons/AirplaneTilt.svg" alt="" />
               <span>37 países</span>
             </li>
             <li>
-              <img src="assets/icons/Image.svg" alt="">
+              <img src="assets/icons/Image.svg" alt="" />
               <span>240 fotos</span>
             </li>
           </ul>
@@ -57,23 +67,23 @@
       </header>
     </div>
     <main class="container">
-      <img src="assets/images/Image 01.png" alt="">
-      <img src="assets/images/Image 02.png" alt="">
-      <img src="assets/images/Image 03.png" alt="">
-      <img src="assets/images/Image 04.png" alt="">
-      <img src="assets/images/Image 05.png" alt="">
-      <img src="assets/images/Image 06.png" alt="">
-      <img src="assets/images/Image 07.png" alt="">
-      <img src="assets/images/Image 08.png" alt="">
-      <img src="assets/images/Image 09.png" alt="">
-      <img src="assets/images/Image 10.png" alt="">
-      <img src="assets/images/Image 11.png" alt="">
-      <img src="assets/images/Image 12.png" alt="">
+      <img src="assets/images/Image 01.png" alt="" />
+      <img src="assets/images/Image 02.png" alt="" />
+      <img src="assets/images/Image 03.png" alt="" />
+      <img src="assets/images/Image 04.png" alt="" />
+      <img src="assets/images/Image 05.png" alt="" />
+      <img src="assets/images/Image 06.png" alt="" />
+      <img src="assets/images/Image 07.png" alt="" />
+      <img src="assets/images/Image 08.png" alt="" />
+      <img src="assets/images/Image 09.png" alt="" />
+      <img src="assets/images/Image 10.png" alt="" />
+      <img src="assets/images/Image 11.png" alt="" />
+      <img src="assets/images/Image 12.png" alt="" />
     </main>
     <footer class="container">
       <span>Travelgram &copy; 2025</span>
       <span>Termos de uso</span>
       <span>Política de privacidade</span>
     </footer>
-</body>
+  </body>
 </html>
