--- a/index.html
+++ b/index.html
@@ -1,89 +1,79 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/index.css" />
-    <title>Viagens</title>
-  </head>
-  <body>
-    <div class="bg-surface-color">
-      <nav class="container">
-        <a href="#">
-          <img src="assets/icons/Logo.svg" alt="Logomarca" />
-        </a>
-        <ul id="primary-menu" class="nav-list">
-          <li>
-            <a href="#">
-              <img src="assets/icons/MagnifyingGlass.svg" />
-            </a>
-          </li>
-          <li><a href="#">Explorar</a></li>
-          <li><a href="#">Minhas Viagens</a></li>
-          <li>
-            <a href="#">
-              <img src="assets/profile-pic.jpg" class="profile-pic-nav" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <header>
-        <div class="container">
-          <div id="profile">
-            <img
-              src="assets/profile-pic.jpg"
-              alt="Image profile"
-              class="profile-pic-nav"
-            />
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Travelgram</title>
+
+    <link rel="stylesheet" href="./styles/index.css">
+</head>
+
+<body>
+    <div class="container">
+        <header>
             <div>
-              <h1>Isabela Torres</h1>
-              <p>
-                Amante de viagens, cultura e gastronomia. 🌍✈️ <br />
-                Aqui compartilho as histórias registradas em cada clique,
-                explorando cantinhos fascinantes do nosso planeta a partir da
-                movimentada cidade de São Paulo. 🏙️📸
-              </p>
+                <img src="./assets/icons/Logo.svg" alt="Logo Travelgram">
             </div>
-          </div>
-
-          <ul id="info">
-            <li>
-              <img src="assets/icons/MapPin.svg" alt="" />
-              <span>São Paulo, Brazil</span>
-            </li>
-            <li>
-              <img src="assets/icons/AirplaneTilt.svg" alt="" />
-              <span>37 países</span>
-            </li>
-            <li>
-              <img src="assets/icons/Image.svg" alt="" />
-              <span>240 fotos</span>
-            </li>
-          </ul>
-        </div>
-      </header>
+            <nav class="navbar">
+                <img class="search" src="./assets/icons/MagnifyingGlass.svg" alt="Icone de Pesquisa">
+                <a href="#">Explorar</a>
+                <a href="#">Minhas viagens</a>
+                <img class="profile" src="./assets/profile-pic.jpg" alt="Perfil do Usuário">
+            </nav>
+        </header>
+        <main>
+            <div class="main-left">
+                <img class="profile" src="./assets/profile-pic.jpg" alt="Foto do Usuário">
+                <div class="profile-info">
+                    <h1>Isabella Torres</h1>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️<br /> Aqui compartilho as histórias registradas em
+                        cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São
+                        Paulo. 🏙️📸</p>
+                </div>
+            </div>
+            <div class="main-right">
+                <div class="item">
+                    <img src="./assets/icons/MapPin.svg" alt="">
+                    <p>São Paulo, Brazil</p>
+                </div>
+                <div class="item">
+                    <img src="./assets/icons/AirplaneTilt.svg" alt="">
+                    <p>37 Paises</p>
+                </div>
+                <div class="item">
+                    <img src="./assets/icons/Image.svg" alt="">
+                    <p>240 fotos</p>
+                </div>
+            </div>
+        </main>
+        <section>
+            <div class="images">
+                <img src="./assets/images/Image 01.png" alt="">
+                <img src="./assets/images/Image 02.png" alt="">
+                <img src="./assets/images/Image 03.png" alt="">
+                <img src="./assets/images/Image 04.png" alt="">
+                <img src="./assets/images/Image 05.png" alt="">
+                <img src="./assets/images/Image 06.png" alt="">
+                <img src="./assets/images/Image 07.png" alt="">
+                <img src="./assets/images/Image 08.png" alt="">
+                <img src="./assets/images/Image 09.png" alt="">
+                <img src="./assets/images/Image 10.png" alt="">
+                <img src="./assets/images/Image 11.png" alt="">
+                <img src="./assets/images/Image 12.png" alt="">
+            </div>
+        </section>
+        <footer>
+            <div>
+                <p>Travelgram &copy; 2025</p>
+            </div>
+            <div class="footer-links">
+                <a href="#">Termos de uso</a>
+                <a href="#">Política de privacidade</a>
+            </div>
+        </footer>
     </div>
-    <main class="container">
-      <img src="assets/images/Image 01.png" alt="" />
-      <img src="assets/images/Image 02.png" alt="" />
-      <img src="assets/images/Image 03.png" alt="" />
-      <img src="assets/images/Image 04.png" alt="" />
-      <img src="assets/images/Image 05.png" alt="" />
-      <img src="assets/images/Image 06.png" alt="" />
-      <img src="assets/images/Image 07.png" alt="" />
-      <img src="assets/images/Image 08.png" alt="" />
-      <img src="assets/images/Image 09.png" alt="" />
-      <img src="assets/images/Image 10.png" alt="" />
-      <img src="assets/images/Image 11.png" alt="" />
-      <img src="assets/images/Image 12.png" alt="" />
-    </main>
-    <footer class="container">
-      <span>Travelgram &copy; 2025</span>
-      <span>Termos de uso</span>
-      <span>Política de privacidade</span>
-    </footer>
-  </body>
+</body>
+
 </html>
