--- a/index.html
+++ b/index.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Travelgram</title>
+    <link rel="stylesheet" href="styles/index.css">
 
-    <link rel="stylesheet" href="./styles/index.css">
+    <title>Isabela Torres - Travelgram</title>
 </head>
-
 <body>
-    <div class="container">
-        <header>
-            <div>
-                <img src="./assets/icons/Logo.svg" alt="Logo Travelgram">
+    <header>
+        <nav class="margin">
+            <img src="assets/icons/Logo.svg" alt="Image logo">
+
+            <div class="menu">
+                <img id="iconglass" src="assets/icons/MagnifyingGlass.svg">
+
+                <span>Explorar</span>
+                <span>Minhas viagens</span>
+
+                <img id="profile" src="assets/profile/Profile pic.svg" alt="Image profile">
             </div>
-            <nav class="navbar">
-                <img class="search" src="./assets/icons/MagnifyingGlass.svg" alt="Icone de Pesquisa">
-                <a href="#">Explorar</a>
-                <a href="#">Minhas viagens</a>
-                <img class="profile" src="./assets/profile-pic.jpg" alt="Perfil do Usuário">
-            </nav>
-        </header>
-        <main>
-            <div class="main-left">
-                <img class="profile" src="./assets/profile-pic.jpg" alt="Foto do Usuário">
-                <div class="profile-info">
-                    <h1>Isabella Torres</h1>
-                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️<br /> Aqui compartilho as histórias registradas em
-                        cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São
-                        Paulo. 🏙️📸</p>
-                </div>
-            </div>
-            <div class="main-right">
-                <div class="item">
-                    <img src="./assets/icons/MapPin.svg" alt="">
-                    <p>São Paulo, Brazil</p>
-                </div>
-                <div class="item">
-                    <img src="./assets/icons/AirplaneTilt.svg" alt="">
-                    <p>37 Paises</p>
-                </div>
-                <div class="item">
-                    <img src="./assets/icons/Image.svg" alt="">
-                    <p>240 fotos</p>
+        </nav>
+
+        <section class="about margin">
+            <div class="main">
+                <img src="assets/profile/Profile pic.svg" alt="Image profile">
+                
+                <div id="description">
+                    <h1>Isabela Torres</h1>
+                    <p>Amante de viagens, cultura e gastronomia. 🌍✈️ Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸</p>
                 </div>
             </div>
-        </main>
-        <section>
-            <div class="images">
-                <img src="./assets/images/Image 01.png" alt="">
-                <img src="./assets/images/Image 02.png" alt="">
-                <img src="./assets/images/Image 03.png" alt="">
-                <img src="./assets/images/Image 04.png" alt="">
-                <img src="./assets/images/Image 05.png" alt="">
-                <img src="./assets/images/Image 06.png" alt="">
-                <img src="./assets/images/Image 07.png" alt="">
-                <img src="./assets/images/Image 08.png" alt="">
-                <img src="./assets/images/Image 09.png" alt="">
-                <img src="./assets/images/Image 10.png" alt="">
-                <img src="./assets/images/Image 11.png" alt="">
-                <img src="./assets/images/Image 12.png" alt="">
+
+            <div class="info">
+                <div class="location flex">
+                    <img src="assets/icons/MapPin.svg" alt="Icon location">
+                    <span>São Paulo, Brasil</span>
+                </div>
+
+                <div class="countries flex">
+                    <img src="assets/icons/AirplaneTilt.svg" alt="Icon airplane">
+                    <span>37 países</span>
+                </div>
+
+                <div class="photos flex">
+                    <img src="assets/icons/Image.svg" alt="Icon image">
+                    <span>240 fotos</span>
+                </div>
             </div>
         </section>
-        <footer>
-            <div>
-                <p>Travelgram &copy; 2025</p>
-            </div>
-            <div class="footer-links">
-                <a href="#">Termos de uso</a>
-                <a href="#">Política de privacidade</a>
-            </div>
-        </footer>
-    </div>
-</body>
+    </header>
 
+    <main>
+        <div class="gallery margin">
+            <img src="assets/images/Image 01.svg" alt="Imagem 1">
+            <img src="assets/images/Image 02.svg" alt="Imagem 2">
+            <img src="assets/images/Image 03.svg" alt="Imagem 3">
+            <img src="assets/images/Image 04.svg" alt="Imagem 4">
+
+            <img src="assets/images/Image 05.svg" alt="Imagem 5">
+            <img src="assets/images/Image 06.svg" alt="Imagem 6">
+            <img src="assets/images/Image 07.svg" alt="Imagem 7">
+            <img src="assets/images/Image 08.svg" alt="Imagem 8">
+
+            <img src="assets/images/Image 09.svg" alt="Imagem 9">
+            <img src="assets/images/Image 10.svg" alt="Imagem 10">
+            <img src="assets/images/Image 11.svg" alt="Imagem 11">
+            <img src="assets/images/Image 12.svg" alt="Imagem 12">
+        </div>
+    </main>
+
+    <footer class="margin">
+        <div class="copy">Travelgram &copy 2025</div>
+
+        <div class="menu">
+            <span>Termos de uso</span>
+            <span>Política de privacidade</span>
+        </div>
+    </footer>
+</body>
 </html>
